refactor: Some general housekeeping. (#632)